Add login,register and temporary authentication

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ Uncomment the following line if you do not want to check your keystore files in.
 
 
 Google Services (e.g. APIs or Firebase)
-google-services.json
+app/src/google-services.json
 
 Freeline
 freeline.py
