--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PestifyApp"
-        tools:targetApi="31">
-        <activity
+        tools:targetApi="31"
+        android:networkSecurityConfig="@xml/network_security_config">
+    <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
